rpnow/room.css
/* ... */
header.rp-titlebar #title-links a {
  padding: 0 10px;
  display: inline-block;
}
header.rp-titlebar #title-links .icon,
header.rp-titlebar #title-links .icon::before {
  display:-ms-flexbox;
  -ms-flex-pack:center;
  -ms-flex-align:center;
  display:-moz-box;
  -moz-box-pack:center;
  -moz-box-align:center;
  display:-webkit-box;
  -webkit-box-pack:center;
  -webkit-box-align:center;
  display: flex;
  box-pack: center;
  box-align: center;

  vertical-align: middle;
  line-height: inherit;
}
header.rp-titlebar a:hover:not(:active){
  background-color: #555;
  color: white;
}
header.rp-titlebar #title-links .selected a {
  background-color: white;
  color: rgb(190,84,190);
}
@media all and (max-width: 850px) {
  body.rp {
    margin-top: 145px;
    padding-top: 0;
  }
  header.rp-titlebar {
    text-align: center;
    height: auto;
    font-size: 18px;
  }
  header.rp-titlebar .logo,
  header.rp-titlebar h2 {
    float: none;
    vertical-align: top;
  }
  header.rp-titlebar #title-links {
    float: none;
    display: block;
    padding: 5px 0;
  }
  header.rp-titlebar #title-links li {
    float: none;
    display: inline-block;
    width: 18%;
    padding: 0 1%;
    max-width: 100px;
    text-align: center;
  }
  header.rp-titlebar #title-links a {
    width: 100%;
    height: 100%;
    padding: 0;
  }
  header.rp-titlebar #title-links a:hover,
  header.rp-titlebar #title-links .selected a {
    border-radius: 20px;
  }
  header.rp-titlebar #title-links a .icon,
  header.rp-titlebar #title-links a .icon::before {
    display: inline;
    vertical-align: top;
  }
}
@media all and (max-width: 500px) {
  body.rp {
    margin-top: 39px;
    padding-top: 24vw;
  }
  header.rp-titlebar {
    font-size: 3.5vw;
    height: 25vw;
    line-height: 12vw;
  }
  header.rp-titlebar a {
    height: 12vw;
  }
  header.rp-titlebar #title-links {
    height: 12vw;
    padding: 0.5vw 0;
  }
  header.rp-titlebar #title-links li {
    font-size: 10vw;
  }
}
#rp-description {
  font-style: italic;
  margin: -100px 0 30px;
  padding: 80px 5px 10px;
  color: #3c3c3c;
  background-color: #ddd;
  box-shadow: 0 0px 10px rgba(104,52,120,0.5);
}
#rp-description p {
  max-width: 650px;
  margin: 0 auto;
}




/**********************************************************
 * roleplay chat page:
 *   MESSAGES
 *
 **********************************************************/
#messages {
  margin: 0 auto;
  width: 100%;
  max-width: 650px;
  display: inline-block;
  text-align: left;
  word-wrap: break-word;
}
#messages.room-feed {
  margin-bottom: 135px;
}
#messages > .message{
  word-wrap: break-word;
}
#messages > .message > .content {
  line-height: 1.6;
}
#messages > .message .color-ip-box {
  display: inline-block;
  vertical-align: middle;
  height: 10px;
  border: solid 1px white;
  margin-right: 5px;
  margin-top: -2px;
}
#messages > .message .color-ip-box > span {
  display: inline-block;
  vertical-align: top;
  width: 7px;
  height: 10px;
}
#messages > .message .timestamp {
  font-size: 90%;
  opacity: 0.5;
}
#messages > .message-narrator {
  background-color: #fff;
  box-shadow: 0 1px 1px #bbb;
  padding: 5px;
  text-align: right;
}
#messages > .message-narrator > .content {
  border: dotted 1px #bbb;
  padding: 15px 20px;
  text-align: left;
}
#messages > .message-narrator > .message-details {
  margin: -5px 28px -2px;
}
#messages > .message-narrator .color-ip-box {
  border-color: #555;
}
#messages > .message-ooc {
  background-color: #707070;
  box-shadow: 0 0 2px #555;
  color: #eee;
  margin: 0 15px;
  padding: 0 5px;
}
#messages > .message-ooc:nth-of-type(2n+1) {
  background-color: #7a7a7a;
}
#messages > .message-ooc + .message-narrator,
#messages > .message-narrator + .message-ooc {
  margin-top: 8px;
}
#messages > .message-ooc > .message-details {
  display: inline;
}
#messages > .message-ooc .timestamp {
  opacity: 0.66;
  font-size: 80%;
}
#messages > .message-ooc .timestamp::before { content: '[ '; }
#messages > .message-ooc .timestamp::after { content: ' ] '; }
#messages > .message-ooc > .content {
  display: inline;
}
#messages > .message-chara {
  margin: 10px;
  margin-top: 22px;
  padding: 6px 8px 10px;
  border-radius: 16px;
  border-bottom-left-radius: 0;
  box-shadow: 0 2px 3px #555;
  position: relative;
  max-width: 100%;
  text-align: right;
}
#messages > .message-chara > .name{
  display: inline-block;
  position: absolute;
  left: 25px;
  top: -13px;
  background-color: inherit;
  border-radius: 4px;
  padding: 3px 10px;
  font-size: 12px;
  letter-spacing: 1px;
  word-spacing: 1px;
  z-index: 100;
  box-shadow: 0 1px 2px #555;
}
#messages > .message-chara > .content {
  background-color: white;
  color: black;
  opacity: 0.9;
  padding: 8px;
  border-radius: 12px;
  border-bottom-left-radius: 0;
  box-shadow: 0 1px 2px #888 inset;
  text-align: left;
}
#messages > .message-chara > .content span.action {
  font-size: 80%;
  padding: 0.3em;
  border-radius: 4px;
  opacity: 0.8;
  box-shadow: 0 1px 1px #3c3c3c;
}
#messages > .message-chara > .message-details {
  margin: -5px 15px -2px 5px;
}




/**********************************************************
 * roleplay chat page:
 *   MESSAGE STREAM INFO BOXES
 *
 **********************************************************/
body.rp .info {
  font-size: 16px;
  text-align: center;
  margin: 0 20px 20px;
  padding: 5px 10px;
  overflow-wrap: break-word;
  color: #666;
  max-width: 650px;
  margin: auto;
}
body.rp .info ol {
  display: inline-block;
  text-align: left;
}
body.rp .info a {
  color: #444;
  font-weight: bold;
  display: inline;
  padding: 20px;
}
body.rp .info a:hover {
  color: rgb(190,84,190);
}




/**********************************************************
 * roleplay chat page:
 *   MESSAGE BOX
 *
 **********************************************************/
#message-box {
  position: fixed;
  z-index: 200;
  bottom: 0;
  background-color: inherit;
  border-spacing: 10px;
  box-shadow: 0 0 20px #222;
}
/* ... */

